@@ -14,6 +14,7 @@ Release 1.1.1 Start 18/09/2022
 05.  tls.c: log ssl error on SSL_accept() failure
 06.  dotls.c: fixed missing carriage return in EHLO output
 07.  dotls.c: log client, server ssl versions on connnect
+08.  dotls.c: bypass SSL/TLS if NOTLS is set
 
 * Thu 08 Sep 2022 12:31:45 +0000 Manvendra Bhangui <ucspi-tcp@indimail.org> 1.1.0-1.1%{?dist}
 Release 1.1.0 Start 14/02/2021 End 08/09/2022
